<resources>
    <string name="app_name">VideoTraining</string>
    <string name="action_settings">Setting</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_videos">List Video</string>
    <string name="nav_item_download">List Download</string>
    <string name="nav_item_video">Video</string>


    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_videos</item>
        <item>@string/nav_item_download</item>
        <item>@string/nav_item_video</item>
    </string-array>

    <string name="title_videos">List Video</string>
    <string name="title_download">List Download</string>
    <string name="title_video">Video</string>

    <string name="desc">image</string>
    <string name="description">Description</string>
    <string name="play">Play</string>
    <string name="download">DownLoad</string>
    <string name="pause">Pause</string>
    <string name="resume">Pause</string>
    <string name="cancel">Resume</string>
    <string name="name">Name</string>
    <string name="pass">Password</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="video">VIDEO</string>
    <string name="done">Done!</string>
    <string name="dơwnload">Downloading.......</string>
    <string name="wait">waiting......</string>
</resources>
