<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:contentDescription="@string/desc"
        android:id="@+id/img_ofdialog"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/tvname_ofdialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvtime_ofdialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/description"
        android:textSize="15sp"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btn_ofdialog"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#f9085e"
        android:gravity="center"
        android:text="@string/play"
        android:textColor="#ffffff"
        android:textSize="20sp" />
</LinearLayout>