<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/layout_ofimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/image_bg"
        android:padding="3dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_toEndOf="@id/layout_ofimage"
        android:layout_toRightOf="@id/layout_ofimage"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="32dp">

            <View
                android:id="@+id/viewconter"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="#f40b0b" />

            <TextView
                android:id="@+id/name_ofvideo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_toLeftOf="@id/viewconter"
                android:layout_toStartOf="@id/viewconter"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time_ofvideo"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_toEndOf="@id/viewconter"
                android:layout_toRightOf="@id/viewconter"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/mprogessbar"
                style="?android:progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_alignParentBottom="true"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_CancelVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/mprogessbar"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_downVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/mprogessbar"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@id/btn_CancelVideo"
                android:layout_toStartOf="@id/btn_CancelVideo"
                android:text="@string/download"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_resumeVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/mprogessbar"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@id/btn_CancelVideo"
                android:layout_toStartOf="@id/btn_CancelVideo"
                android:text="@string/resume"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_pauseVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/mprogessbar"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@id/btn_CancelVideo"
                android:layout_toStartOf="@id/btn_CancelVideo"
                android:text="@string/pause"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvcountfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/mprogessbar"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@id/btn_downVideo"
                android:layout_toStartOf="@id/btn_downVideo"
                android:gravity="center"
                android:textSize="20sp"
                android:visibility="invisible" />


        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>